static/datastyle.css
/* Shared by every page */
#project-title {
	padding-top: 1em;
	padding-bottom: 1em;
	background-color: #afe38c;
	color: #000000;
	text-align: center;
	font-family: Verdana, Geneva, sans-serif;
	margin-bottom: -1.1em;
	border-top: 5px solid #2E8B57;
	border-left: 5px solid #2E8B57;
	border-right: 5px solid #2E8B57;
}

#navigationBar_ul{
	list-style-type: none;
	margin: 0;
  	padding: 0;
  	overflow: hidden;
	background-color: #2E8B57;
	margin-bottom: 1em;
	box-shadow: 0 5px 5px 0 #296b46;
}

.navigationBar_li{
	float: left;
}

.navigationBar_li a {
	display: block;
	color: white;
	padding: 14px 16px;
  	text-decoration: none;
  }

.navigationBar_li a:hover {
	background-color: #D2691E;
}

.titleSub{
	text-align: center;
	margin-bottom: 1em;
	color: rgb(32, 32, 32);
}

body {
	background-color: #F5F5DC;
	margin-left: 5%;
	margin-right: 5%;
}

h2#HelpfulTextAboveSearchInput {
	color: #2E8B57;
	text-align: center;
	font-family: Verdana, Geneva, sans-serif;
	text-shadow: 2px 2px 3px #afe38c;
	border-bottom: 10px;
	border-top: 10px;
}

#getColorblindMode {
	bottom: 100%;
	padding-top: 20px;
	font-size: large;
	font-weight: 600;
}

/* Only in index.html*/
.ALLDS {
	margin-top: 10px;
	display: flex;
	flex-direction: row;
	background-color: #afe38c;
	border-radius: 15px;
}

.disaster-container{
	display: flex;
	flex-direction: column;
	gap: 10px;
	padding: 10px;
	align-items: left;
}

#inputContainer {
    display: flex;
    gap: 15px;
}

#inputContainer input {
    width: 150px;
    padding: 8px;
    text-align: center;
}

#getData {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
    margin-top: 30px;
}

div#CheckAllDisasters {
	margin-top: 20px;
	background-color: #afe38c;
	padding: 10px;
	border-radius: 10px;
}

/* Only in resources.html */
.resourcestable a {
	color: rgb(49, 195, 49);
	font-weight: bold;
	text-decoration: none;
	font-family: Verdana, Geneva, sans-serif;
	font-size: 35px;
	text-align: center;
}

.resourcestable a:hover {
	color: #afe38c;

}

.resourcestable {
	width: 100%;
	border-collapse: collapse;
	border: none;
}

td {
	text-align: center;
}

td[class] a {
	color: #0dcc10;
	border-radius: 8px;
	background-color: #0000004d;
}

td[class] a:hover {
	-webkit-text-fill-color: #ffb700;
}
.avalanche {
	background-image: url('../static/images/avalanche.jpg');
	background-size: cover;
	background-position: center;
}

.coastalflooding {
	background-image: url('../static/images/coastalflooding.jpg');
	background-size: cover;
	background-position: center;
}

.coldwave {
	background-image: url('../static/images/coldwave.jpg');
	background-size: cover;
	background-position: center;
}

.drought {
	background-image: url('../static/images/drought.jpg');
	background-size: cover;
	background-position: center;
}

.earthquake {
	background-image: url('../static/images/earthquake.jpg');
	background-size: cover;
	background-position: center;
}

.hail {
	background-image: url('../static/images/hail.jpg');
	background-size: cover;
	background-position: center;
}

.heatwave {
	background-image: url('../static/images/heatwave.jpg');
	background-size: cover;
	background-position: center;
}

.hurricane {
	background-image: url('../static/images/hurricane.jpg');
	background-size: cover;
	background-position: center;
}

.icestorm {
	background-image: url('../static/images/icestorm.jpg');
	background-size: cover;
	background-position: center;
}

.landslide {
	background-image: url('../static/images/landslide.jpg');
	background-size: cover;
	background-position: center;
}

.lightning {
	background-image: url('../static/images/lightning.jpg');
	background-size: cover;
	background-position: center;
}

.strongwind {
	background-image: url('../static/images/strongwind.jpg');
	background-size: cover;
	background-position: center;
}

.tornado {
	background-image: url('../static/images/tornado.jpg');
	background-size: cover;
	background-position: center;
}

.tsunami {
	background-image: url('../static/images/tsunami.jpg');
	background-size: cover;
	background-position: center;
}

.volcano {
	background-image: url('../static/images/volcano.jpg');
	background-size: cover;
	background-position: center;
}

.wildfire {
	background-image: url('../static/images/wildfire.jpg');
	background-size: cover;
	background-position: center;
}

.winterweather {
	background-image: url('../static/images/winterweather.jpg');
	background-size: cover;
	background-position: center;
}

tr:nth-child(even) {
	background-color: #afe38c;
}

tr {
	height: 150px;
}

/* Only in top5.html */
#top5box {
	margin-top: 10px;
	display: flex;
	flex-direction: column;
	background-color: #afe38c;
	border-radius: 15px;
	text-align: center;
	align-items: center;
    width: 700px;
    padding: 10px;
    margin: 0 auto;
}

/* Shared by top5.html and index.html */
#Submit {
    display: flex;
	padding-top: 1em;
    justify-content: center;
}

#Submit input {
    width: 120px;
    padding: 10px;
    background-color: #FFC107;
    color: black;
    border-radius: 10px;
    cursor: pointer;
}

#Submit input:hover {
    background-color: #D2691E;
}

/* Shared by displaydata.html and displaytop5data.html */
#countyResults {
	display: flex;
	align-items: center;
	flex-direction: column;
	background-color: #afe38c;
	padding: 10px;
	width: 35%;
	border-radius: 15px;
	margin: auto;
    border: #000000;
    border-width: 10px;
}

#countyResults p {
	margin: 10px 0;
    font-size: 20px;
}

.risk-images {
	display: flex;
}

button.collapsible {
	color: green;
    margin: 5px 0;
    font-size: 1.2em;
	font-weight: bold;
	width: 100%;
	border-radius: 15px;
	border: none;
	background-color: #afe38c;
	text-align: center;
}

.collapsible:after {
	content: '\002B';
	font-size: 1.2em;
	color: green;
	float: right;
}

.collapsible.active:after {
	content: '\2212';
	font-size: 1.2em;
	color: green;
	float: right;
}

div.RiskInfo {
	background-color: #afe38c;
	display: flex;
	flex-direction: column;
	align-items: center;
	border-radius: 15px;
	width: 20%;
	text-align: center;
	margin-bottom: 10px;
	left: 3%;
	top: 26%;
	position: absolute;
}

div.RiskInfo strong {
    margin: 10px 0;
}

div.rating-breakdown {
	background-color: #afe38c;
	display: flex;
	flex-direction: column;
	align-items: center;
	border-radius: 15px;
	width: 20%;
	text-align: center;
	margin-bottom: 10px;
	left: 3%;
	top: 72%;
	position: absolute;
}

div.rating-breakdown h3 {
	color: green;
    margin: 5px 0;
    font-size: 1.2em;
}

div.rating-legend {
	background-color: #afe38c;
	display: flex;
	flex-direction: column;
	align-items: center;
	border-radius: 15px;
	width: 20%;
	text-align: center;
	margin-bottom: 10px;
	right: 3%;
	top: 26%;
	position: absolute;
}

div.content {
	padding: 0 18px;
  	max-height: 0;
  	overflow: hidden;
  	transition: max-height 0.2s ease-out;
  	background-color: #afe38c;
	border-radius: 15px;
}

div.content p {
	margin: 15px 0;
	font-size: 20px;
}

/* Only in displayerror.html */
.errorDisplay {
	background-color: #afe38c;
    width: 700px;
    border: 2px solid green;
    border-radius: 15px;
    padding: 10px;
    margin: 0 auto;
	text-align: center;
}

/* Only in getlocation.html */
#GoogleMap {
    height: 400px;
    width: 60%;
	margin: 0 auto;
    border: 3px solid green;
    border-radius: 15px;
    padding: 10px;
    margin: 0 auto;
	margin-bottom: 2em;
	margin-top: 1em;
	display: none;
  }

#GetLocationButton {
	width: 120px;
    padding: 10px;
    background-color: #FFC107;
    color: black;
    border-radius: 10px;
    cursor: pointer;
	display: flex;
	justify-content: center;
	margin: 0 auto;
}

#GetLocationButton:hover {
    background-color: #D2691E;
}

#UserCoordinates {
	text-align: center;
}

/* Only in about.html */

section {
	padding-bottom: 10px;
}

section p {
	font-size: larger;
	font-weight: 550;
	text-align: center;
	padding: 0px 10em;
}

footer {
	color: rgb(0, 0, 0);
	position: relative;
	width: 100%;
	top: 110px;
	padding-top: 20px;
	text-align: center;
}

